# 3D_DxLib_Sample

./: .gitignore  CMakeLists.txt  framework.h  main.cpp
Object/: BaseObject.h  TestObject.cpp  TestObject.h
Scene/: RootScene.cpp  RootScene.h
Shader/: iii.fbx  iii.mv1
